--- a/tt-playbook-frontend/package.json
+++ b/tt-playbook-frontend/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.4",
     "react-scripts": "5.0.1",
-    "typescript": "^4.4.2",
+    "typescript": "*",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -24,7 +24,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "lint": "eslint \"{.,src,src/**}/*.{ts,tsx}\" --max-warnings=0 --cache",
+    "lint:fix": "eslint \"{.,src,src/**}/*.{ts,tsx}\" --max-warnings=0 --cache --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +47,13 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^22.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.30.1",
     "prettier": "^2.7.1"
   }
 }
