--- a/tt-playbook-frontend/package.json
+++ b/tt-playbook-frontend/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "i18next": "^21.9.1",
+    "mobx": "^6.6.1",
+    "mobx-react": "^7.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.4",
