--- a/tt-playbook-frontend/.eslintrc.json
+++ b/tt-playbook-frontend/.eslintrc.json
@@ -3,15 +3,17 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["plugin:react/recommended", "standard-with-typescript"],
+  "extends": [
+    "plugin:react/recommended",
+    "standard-with-typescript",
+    "prettier"
+  ],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
     "project": "./tsconfig.json"
   },
-  "plugins": ["react"],
-  "rules": {
-    "comma-dangle": 0
-  }
+  "plugins": ["react", "prettier"],
+  "rules": {}
 }
