--- a/tt-playbook-frontend/package.json
+++ b/tt-playbook-frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.4",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
     "typescript": "*",
     "web-vitals": "^2.1.0"
   },
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.5.0",
