--- a/tt-playbook-frontend/.eslintrc.json
+++ b/tt-playbook-frontend/.eslintrc.json
@@ -15,5 +15,7 @@
     "project": "./tsconfig.json"
   },
   "plugins": ["react", "prettier"],
-  "rules": {}
+  "rules": {
+    "@typescript-eslint/naming-convention": "off"
+  }
 }
